# Axle

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  README.md
.cache/clangd/index/: App.cpp.80D1F99724ADC92C.idx  App.h.45A7D2A37AF336C6.idx  KeyBoardKey.h.18ECAE7DE2E3C18B.idx  Keyboard.cpp.F3EB776D89FB40F0.idx  Keyboard.h.F301E9DCB6F8EE76.idx  Matrix4.cpp.803C7403140849F2.idx  Matrix4.h.76E8DD77926604BD.idx  Mouse.cpp.2667610BF5F04068.idx  Point2.cpp.E461EDC052BEEF24.idx  Point2.h.47FD07133EC7586E.idx  Size2.cpp.42D68A14A2D59454.idx  Size2.h.85DDE6BBC40B23D3.idx  Vector2.cpp.E5169B2216EE85DC.idx  Vector2.h.48DA93DD6F160C92.idx  cocoa_init.m.50505C5F6CE8A804.idx  cocoa_joystick.h.CEE8D0BB49E92406.idx  cocoa_joystick.m.EFAA89081F1BF0EB.idx  cocoa_monitor.m.B0ED2D6F3B839B5A.idx  cocoa_platform.h.EF80EA5F5E68359A.idx  cocoa_time.c.B4CA844757B3D17B.idx  cocoa_time.h.A5E8601973749E70.idx  cocoa_window.m.280E5F205578C6BD.idx  context.c.A538B9C335EDE5FF.idx  egl_context.c.BE5ED89368C76AFF.idx  glad.c.C31AF6DA6B0D9DCE.idx  glad.h.03DFD576060EF4D3.idx  glfw3.h.E798AA91FB9E417A.idx  glfw3native.h.4A4A7B877865EE31.idx  init.c.0DC77150407E6FA3.idx  input.c.ECEAD01C336C2E5C.idx  internal.h.5DBF9450B3D7D8CE.idx  khrplatform.h.7906E8D84089A9AE.idx  (+18 more)
include/Core/: App.h  App.hpp  Color.h  Color.hpp  Errors.h  Errors.hpp
include/Graphics/: Shader.h  Shader.hpp  Texture.h  Texture.hpp
include/Input/: KeyBoardKey.h  Keyboard.h  Mouse.h
include/Math/: Mat2.hpp  Mat3.hpp  Mat4.h  Matrix.hpp  Matrix4.h  Point2.h  Size2.h  Vec2.hpp  Vec3.hpp  Vec4.hpp  Vector.h  Vector.hpp  Vector2.h
include/Utils/: Constants.h  Constants.hpp  Filesystem.h  Filesystem.hpp
res/shaders/: default.fs  default.vs
src/: main.cpp
src/Core/: App.cpp  Color.cpp  Errors.cpp
src/Graphics/: Shader.cpp  Texture.cpp
src/Input/: Keyboard.cpp
src/Math/: Mat2.cpp  Mat3.cpp  Mat4.cpp  Matrix4.cpp  Point2.cpp  Size2.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp  Vector.cpp  Vector2.cpp
src/Utils/: Filesystem.cpp
